language/move-lang/tests/move_check/typing/pack_unit.move
module M {
    struct Box<T> { f: T }

    fun t0() {
        Box { f: () };
    }
}
